Some final cleanup